# tear-cls

./: .gitignore  CLAUDE.md  README.md  eda.ipynb  eff_train.py  pyproject.toml  setup.sh  train.py
docs/: augmentation.md  data.md  models.md  splitting.md  writeup.md
tearcls/: augment.py  augmentation.py  data.py  data_split.py  evaluation.py  gwy_prep.py  palettes.py  raw_features.py  render.py  server.py
tearcls/ui/: index.html
